--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ serde_json = "1.0"
 scraper = "0.18"
 url = "2.4"
 image = "0.24"
-clap = "4.4.8"
+clap = { version = "4.4.8", features = ["derive"] }
+regex = "1.10.2"
