--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-flate2 = "1.0.24"
 tokio = { version = "1.34.0", features = ["full"] }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -16,3 +15,6 @@ url = "2.4"
 image = "0.24"
 clap = { version = "4.4.8", features = ["derive"] }
 regex = "1.10.2"
+tempfile = "3.8.1"
+rand = "0.8.5"
+tokio-retry = "0.3"
